# jigsaw-acrc-7th-place

./: .gitignore  LICENSE  README.md  pyproject.toml
jigsaw/: pyproject.toml
jigsaw-llm/: pyproject.toml
jigsaw-llm/configs/exp100/: gemma-2-27b-it.yaml  gemma2-9b.yaml  phi-4.yaml  qwen3-14b.yaml  qwen3-8b-guard.yaml  shieldgemma-9b.yaml
jigsaw-llm/exp/: exp_101.py  exp_104.py  exp_106.py
jigsaw-llm/src/jigsaw_llm/: __init__.py  config.py  data.py  inference.py  merge.py  model.py  train.py  trainer.py
jigsaw-llm/src/jigsaw_llm/prompt/: prompt.py
jigsaw/src/jigsaw/: data.py  gen_fold.py  rebuild_train.py
