[project]
name = "jigsaw-llm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "ktr", email = "ktr.w1011@gmail.com" }
]
requires-python = "==3.11.*"
dependencies = [
    "jigsaw",
    "datasets>=3.6.0",
    "pandas>=2.3.0",
    "peft>=0.15.2",
    "scikit-learn>=1.7.0",
    "transformers[accelerate,sentencepiece]==4.55.3",
    "trl>=0.19.0",
    "wandb>=0.20.1",
]

[project.optional-dependencies]
unsloth = [
    "unsloth==2025.9.8",
]
build = ["torch", "setuptools", "packaging"]
compile = ["flash-attn==2.8.0.post2"]

[tool.uv.sources]
jigsaw = { workspace = true }

[build-system]
requires = ["uv_build>=0.8.3,<0.9.0"]
build-backend = "uv_build"
